.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
23:05:32 **** Build of configuration Debug for project 01_led_toggle_addr ****
make -j4 all 
arm-none-eabi-gcc -mcpu=cortex-m4 -g3 -DDEBUG -c -x assembler-with-cpp -MMD -MP -MF"Startup/startup_stm32f411retx.d" -MT"Startup/startup_stm32f411retx.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Startup/startup_stm32f411retx.o" "../Startup/startup_stm32f411retx.s"
arm-none-eabi-gcc "../Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DSTM32 -DSTM32F4 -DSTM32F411RETx -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Src/main.d" -MT"Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Src/main.o"
arm-none-eabi-gcc "../Src/syscalls.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DSTM32 -DSTM32F4 -DSTM32F411RETx -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Src/syscalls.d" -MT"Src/syscalls.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Src/syscalls.o"
arm-none-eabi-gcc "../Src/sysmem.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DSTM32 -DSTM32F4 -DSTM32F411RETx -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Src/sysmem.d" -MT"Src/sysmem.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Src/sysmem.o"
../Src/main.c: In function 'main':
../Src/main.c:13:89: error: 'AHB1ENR_OFFSET' undeclared (first use in this function); did you mean 'AHB1EN_R_OFFSET'?
   13 | #define RCC_AHB1EN_R                      (*(volatile unsigned int *)(AHB1PERIPH_BASE + AHB1ENR_OFFSET))
      |                                                                                         ^~~~~~~~~~~~~~
../Src/main.c:35:9: note: in expansion of macro 'RCC_AHB1EN_R'
   35 |         RCC_AHB1EN_R  |= GPIOAEN;
      |         ^~~~~~~~~~~~
../Src/main.c:13:89: note: each undeclared identifier is reported only once for each function it appears in
   13 | #define RCC_AHB1EN_R                      (*(volatile unsigned int *)(AHB1PERIPH_BASE + AHB1ENR_OFFSET))
      |                                                                                         ^~~~~~~~~~~~~~
../Src/main.c:35:9: note: in expansion of macro 'RCC_AHB1EN_R'
   35 |         RCC_AHB1EN_R  |= GPIOAEN;
      |         ^~~~~~~~~~~~
../Src/main.c: At top level:
../Src/main.c:43:1: error: expected identifier or '(' before 'while'
   43 | while(1)
      | ^~~~~
make: *** [Src/subdir.mk:25: Src/main.o] Error 1
make: *** Waiting for unfinished jobs....
"make -j4 all" terminated with exit code 2. Build might be incomplete.
23:06:56 **** Incremental Build of configuration Debug for project 01_led_toggle_addr ****
make -j4 all 
arm-none-eabi-gcc "../Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DSTM32 -DSTM32F4 -DSTM32F411RETx -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Src/main.d" -MT"Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Src/main.o"
../Src/main.c: In function 'main':
../Src/main.c:13:89: error: 'AHB1ENR_OFFSET' undeclared (first use in this function); did you mean 'AHB1EN_R_OFFSET'?
   13 | #define RCC_AHB1EN_R                      (*(volatile unsigned int *)(AHB1PERIPH_BASE + AHB1ENR_OFFSET))
      |                                                                                         ^~~~~~~~~~~~~~
../Src/main.c:35:9: note: in expansion of macro 'RCC_AHB1EN_R'
   35 |         RCC_AHB1EN_R  |= GPIOAEN;
      |         ^~~~~~~~~~~~
../Src/main.c:13:89: note: each undeclared identifier is reported only once for each function it appears in
   13 | #define RCC_AHB1EN_R                      (*(volatile unsigned int *)(AHB1PERIPH_BASE + AHB1ENR_OFFSET))
      |                                                                                         ^~~~~~~~~~~~~~
../Src/main.c:35:9: note: in expansion of macro 'RCC_AHB1EN_R'
   35 |         RCC_AHB1EN_R  |= GPIOAEN;
      |         ^~~~~~~~~~~~
make: *** [Src/subdir.mk:25: Src/main.o] Error 1
"make -j4 all" terminated with exit code 2. Build might be incomplete.
23:07:53 **** Incremental Build of configuration Debug for project 01_led_toggle_addr ****
make -j4 all 
arm-none-eabi-gcc "../Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DSTM32 -DSTM32F4 -DSTM32F411RETx -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Src/main.d" -MT"Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Src/main.o"
arm-none-eabi-gcc -o "01_led_toggle_addr.elf" @"objects.list"   -mcpu=cortex-m4 -T"/home/ankith/bareMetal/01_led_toggle_addr/STM32F411RETX_FLASH.ld" --specs=nosys.specs -Wl,-Map="01_led_toggle_addr.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: 01_led_toggle_addr.elf
 
arm-none-eabi-size  01_led_toggle_addr.elf 
arm-none-eabi-objdump -h -S 01_led_toggle_addr.elf  > "01_led_toggle_addr.list"
   text	   data	    bss	    dec	    hex	filename
    732	      0	   1568	   2300	    8fc	01_led_toggle_addr.elf
Finished building: default.size.stdout
 
Finished building: 01_led_toggle_addr.list
 
